update cf and run dtc